2010-05-07  Seif El-Din Bairakdar  <seif.bairakdar@gmail.com>

	* src/ContextGenerator.cpp: Clean up

2010-05-07  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>

	* src/genTest.cpp: Use a single srand(). 
	* src/QueryPlanGenerator.cpp: Likewise.

2010-05-07  Minh Tran Dao  <dao@.kr.tuwien.ac.at>

	* include/ContextGenerator.h: Use no_interface_atoms in generating
	bridge rules.
	* src/ContextGenerator.cpp: Likewise.
	* src/genTest.cpp: Likewise.

	* src/LogicVisitor.cpp: Fix stupid bug: 96 vs. 'a'
	* src/DLVVisitor.cpp: Likewise.

2010-05-07  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* TODO: Update.

2010-05-06  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/run-tests.sh: New file.

2010-05-06  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>

	* src/dmcsd.cpp: Fix cerr here and there.
	* src/dmcsc.cpp: Likewise.

	* include/StatsInfo.h: Add time_in_secs()

	* src/OptDMCS.cpp: Fix: incoming V for guessing, outgoing V
	for combining.
	* include/OptDMCS.h: Likewise.

	* include/PrimitiveMessage.h: Use history as a list.
	* src/PrimitiveDMCS.cpp: Likewise.


2010-05-06  Seif El-Din Bairakdar  <seif.bairakdar@gmail.com>

	* src/genTest.cpp: Fix neighbor access

	* src/QueryPlan.cpp: used getHostName1 and getPort1 as we are still in generation mode

	* include/Context.h: Add setNeighbors method

2010-05-06  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>

	* src/OptDMCS.cpp: Clean up.
	* src/PrimitiveDMCS.cpp: Likewise.

2010-05-06  Minh Tran Dao  <dao@kr.tuwien.ac.at>

	* src/dmcsd.cpp: Initialize OptDMCS with global_sigs.

	* src/OptDMCS.cpp: Use ProxySignatureByLocal.

	* include/OptDMCS.h: Now inherits global sigs from BaseDMCS.
	* include/PrimitiveDMCS.h: Likewise.

	* include/BaseDMCS.h: Move global_sigs up here.
	* src/BaseDMCS.cpp: Likewise.

2010-05-06  Minh Tran Dao  <dao@.kr.tuwien.ac.at>

	* include/ProxySignatureByLocal.h: Use ProxySignatureByLocal in PrimitiveDMCS.
	* src/PrimitiveDMCS.cpp: Likewise.
	* src/OptDMCS.cpp: Likewise.